--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Gif Search</title>
 </head>
 <body>
-    
+    <div class="box">
+        <div class="search-container">
+            <input type="text" id="search-box" placeholder="Enter keyword">
+            <button id="submit-btn">Search</button>
+        </div>
+        <div class="loader"></div>
+        <div class="wrapper"></div>
+    </div>
 </body>
 </html>
