--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
+    <script src="api-key.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <title>Gif Search</title>
 </head>
 <body>
     <div class="box">
         <div class="search-container">
-            <input type="text" id="search-box" placeholder="Enter keyword">
+            <input type="text" id="search-box" value="funny" placeholder="Enter keyword">
             <button id="submit-btn">Search</button>
         </div>
         <div class="loader"></div>
