--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
     <script src="api-key.js" defer></script>
+    <link rel="icon" href="icon.jpg">
     <link rel="stylesheet" href="style.css">
     <title>Gif Search</title>
 </head>
